# tue_msgs

./: CMakeLists.txt  package.xml
action/: LocateDoorHandle.action
msg/: GripperCommand.msg  GripperMeasurement.msg  MaskedImage.msg  People.msg  Person.msg  RGBLightCommand.msg
srv/: GetMaskedImage.srv  PoseProbability.srv
